src/components/MovieCard/MovieCard.module.scss
.MovieCard {
  background-color: #fff;
  transition: all 0.3s ease-out;
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  height: 100%;
  display: flex;
  flex-direction: column;

  a {
    text-decoration: none;
  }
  a:hover {
    text-decoration: underline;
  }
}

.Poster {
  max-width: 100%;
}

.Description {
  padding: 20px;
  display: flex;
  flex-direction: column;
  min-height: 150px;
  height: 100%;
}

.Title {
  font-size: var(--fontSize-1);
  font-weight: var(--fontWeight-normal);
  line-height: 1.5;
  margin: 0;
  margin-bottom: 20px;
}

.Price {
  font-weight: var(--fontWeight-bold);
  margin-top: auto;
  margin-bottom: 10px;
}

.BottomInfo {
  display: flex;
  align-items: center;

  * {
    margin: 0;
  }
}

.PurchaseStatus {
  margin-left: auto;
}

